interact system and glow shader

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Assets\Test_Scenes\Player_Movement\Player.cs" />
     <Compile Include="Assets\Test.cs" />
+    <Compile Include="Assets\Resource_Class.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
