--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/[Uu]ser[Ss]ettings/  # Added: ignores all user settings including layouts and search
 
 # MemoryCaptures can get excessive in size
 # They also could contain extremely sensitive data
@@ -66,3 +66,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /Assets/StreamingAssets/aa.meta
 /Assets/StreamingAssets/aa/*
+
+# === Custom additions to ignore editor layout/search files ===
+*.dwlt        # Unity editor window layout files (like default-6000.dwlt)
+*.settings    # Unity search or editor settings (like Search.settings)
